--- a/Computer Graphics/Books/流体引擎开发(个人翻译).md
+++ b/Computer Graphics/Books/流体引擎开发(个人翻译).md
@@ -1390,7 +1390,278 @@ $$
 2x-y=3\\
 -x+2y=6
 $$
-我们可以通过将第一行乘以2，将其添加到第二行以消除y项，然后将其除以3得到x=4和y=5来求解上述方程。这也可以从几何角度进行解释；求x–y平面上两条直线的交点。或者，我们可以将方程转换为矩阵和向量形式，这样
+​		我们可以通过将第一行乘以2，将其添加到第二行以消除y项，然后将其除以3得到x=4和y=5来求解上述方程。这也可以从几何角度进行解释；求x–y平面上两条直线的交点。或者，我们可以将方程转换为矩阵和向量形式，就像这样
+$$
+\left[\begin{matrix}2&-1\\
+-1&2\\
+\end{matrix}\right]
+\left[\begin{matrix}x\\
+y\\
+\end{matrix}\right]
+=
+\left[\begin{matrix}3\\
+6\\
+\end{matrix}\right]
+\tag{1.21}
+$$
+然后，可通过将方程两侧的逆矩阵相乘来计算该解，从而
+$$
+\left[\begin{matrix}x\\
+y\\
+\end{matrix}\right]
+=\left[\begin{matrix}2&-1\\
+-1&2\\
+\end{matrix}\right]^{-1}
+
+\left[\begin{matrix}3\\
+6\\
+\end{matrix}\right]
+=\frac{1}{3}
+\left[\begin{matrix}2&1\\
+1&2\\
+\end{matrix}\right]\left[\begin{matrix}3\\
+6\\
+\end{matrix}\right]
+=\left[\begin{matrix}4\\
+5\\
+\end{matrix}\right]
+\tag{1.22}
+$$
+如果我们把这个过程推广到N维系统，我们可以把线性方程组表示为
+$$
+Ax=b\tag{1.23}
+$$
+其中A是系统矩阵，x是未知解，b是线性方程组常数项的向量
+
+#### 1.3.4.1 直接求解法 （Direct Methods）
+
+​		上面的例子使用逆矩阵来计算解是求解线性系统的一种方法。这里的关键是如何计算逆矩阵，从上一节我们知道，我们可以使用高斯-乔丹消去法。这种不经近似*直接计算解的方法称为“直接”方法。对于小型系统，直接方法可能很有用。但对于许多数值问题中的大系统，由于时间复杂性，直接方法往往不切实际。例如，高斯-乔丹消去法的时间复杂度为O（N3），其中N是线性系统的维数。
+
+#### 1.3.4.2 间接求解法 （Indirect Methods）
+
+​		与直接计算解决方案不同，获得解决方案的另一种方法是进行初始猜测并多次迭代以接近答案。如果确定达到预定义阈值，表明近似解足够好，我们可以终止迭代并使用最后一个已知答案。这种方法称为“间接”方法。
+
+##### 1.3.4.2.1 雅可比方法（Jacobi Method）
+
+​		假设系统矩阵A是对角矩阵。这意味着只有对角元素a~ii~是非零的，其他非对角元素都是零。在这种情况下，求A的逆矩阵非常简单；A^-1^的第i个对角元素就是1/a~ii~。如果A不是对角矩阵，但对角分量仍然占主导地位，我们可以预测A^−1^类似于D^−1^，其中D是矩阵A的对角线部分。记住这一点，让我们重写方程1.23，比如
+$$
+(D+R)x=b\tag{1.24}
+$$
+​		其中R=A-D。这个这个方程可以进一步推导
+$$
+Dx=b-Rx\tag{1.25}
+$$
+​		最后
+$$
+x=D^{-1}(b-Rx)\tag{1.26}
+$$
+​		如果上面的x是正确的解，则方程将成立。但是，如果左侧和右侧的x不同，则将新x放到右侧将导致左侧的x不同。我们可以通过将结果x从左侧再次传递到右侧，直到两个x都达到相同的值，从而继续迭代
+$$
+x_i^{k+1} = \frac{1}{a_{ii}}(b_i-\sum_{j\neq i}a_{ij}x_j^k)\tag{1.28}
+$$
+​		其中k是迭代次数。这个过程称为雅可比迭代，这种方法称为雅可比方法。根据上面的最后一个等式，如果系统矩阵是纯对角矩阵，R应该为零。因此，我们只需一次迭代就能得到正确的解。如果系统矩阵A并不是纯对角矩阵，则Rx将涌入更多的非零元素，需要更多的迭代才能收敛。一般来说，Jacobi方法具有O（N2）时间复杂度[100]。
+
+ps：雅可比迭代在对角矩阵不占优势（dominant）的情况下可能会发散
+
+对角阵占优：简而言之就是对角矩阵的某一元素比该元素所在行的所有元素相加都要大（除该元素），见下公式
+$$
+|a_{ii}|\geq\sum_{j\neq i}|a_{ij}|
 $$
 
+
+##### 1.3.4.2.2 高斯-赛德尔法（Gauss-Seidel Method）
+
+​		为了加速Jacobi方法的收敛，让我们尝试将更多信息传递到方程的右侧，而不是对角线。与雅可比方程类似，我们可以将方程1.23改写为：
 $$
+(L+U)x=b\tag{1.29}
+$$
+​		其中L是矩阵的下三角部分，包括对角线，U是严格的上三角部分。例如，
+$$
+\left[\begin{matrix}1&2&3\\
+4&5&6\\
+7&8&9\\
+\end{matrix}\right]=
+\left[\begin{matrix}1&0&0\\
+4&5&0\\
+7&8&9\\
+\end{matrix}\right]
+\left[\begin{matrix}0&2&3\\
+0&0&6\\
+0&0&0\\
+\end{matrix}\right]
+$$
+​		这里，右边的第一个矩阵是L，最后一个是U。然后我们可以把迭代方程写成
+$$
+Lx=b-Ux\tag{1.31}
+$$
+​		现在，与对角矩阵不同，知道三角矩阵L的求逆不是一个简单的任务，而且需要直接的方法。然而，如果你仔细研究这个方程，你会注意到x的第一个元素x1，可以通过简单的计算得到
+$$
+x_1^{k+1}=\frac{1}{a_{11}}(b_1 - \sum_{j>1}a_{1j}x^k_j)\tag{1.32}
+$$
+​		因为我们现在有x~1~^k+1^，我们可以将此解分配给方程的第二行，即：
+$$
+x_2^{k+1}=\frac{1}{a_{22}}(b_2 - a_{21}x_1^{k+1} -\sum_{j>i}a_{2j}x^k_j)\tag{1.33}
+$$
+![公式1.33](image/公式1.33.png)
+
+ps:原图是上面这个，怀疑错了
+
+为了推广这个过程，我们可以将迭代方程写成如下：
+$$
+x_i^{k+1}=\frac{1}{a_{ii}}(b_i - \sum_{j>i}a_{ij}x_j^{k+1} -\sum_{j>i}a_{ij}x^k_j)\tag{1.34}
+$$
+​		因此，在不反转矩阵L的情况下，我们可以执行迭代。这就是所谓的高斯-赛德尔方法。请注意，上述方程中的项
+$$
+\sum_{j>i} a_{ij}x_{j}^{k+1}
+$$
+是**高斯-赛德尔方法**和**雅可比方法**之间的唯一区别。**该项是前一行的解的贡献，它使迭代最新**，因此比雅可比迭代收敛得更快。但是，该方法仍然具有O（N2）时间复杂度，这与Jacobi方法相同。
+
+##### 1.3.4.2.3 梯度下降法（Gradient Descent Method）	
+
+​		另一种解决线性系统的方法是通过解决最小化问题。根据方程式1.23
+$$
+F(x)=|Ax-b|^2\tag{1.35}
+$$
+​		如果输入x是方程解，此函数将返回零。如果不是，我们可以迭代找到使F（x）=0的x。例如，想象一个二维系统，其中F（x）可以绘制，如图1.16所示。从x1开始的点在每一步都遵循最陡（或梯度）方向，垂直于等角线。*经过足够的迭代后，解将收敛，使函数F最小化。这个过程称为梯度下降法。然而，在流体模拟中求解线性系统时，由于收敛速度慢，很少使用梯度下降法。例如，如果图1.16中椭球体的一个半轴比另一个长得多，则需要多次迭代才能得到最终解。然而，梯度下降法这种方法 为最常用的方法之一：共轭梯度法 提供了基础。
+
+![图1.16](image/图1.16.png)
+
+**图 1.16**
+
+梯度下降过程的图示。灰线表示函数F的等熵线
+
+##### 1.3.4.2.4 共轭梯度法（Conjugate Gradient Method）\\ TODO
+
+​		在实践中，通常使用称为共轭梯度（CG）的扩展方法。该方法不是在每次迭代时采用最陡的方向，而是遵循“共轭”方向。当两个向量a和b满足
+$$
+a\cdot(Ab)\tag{1.36}=0
+$$
+​		我们说这两个向量是共轭的。注意，在确定共轭时涉及系统矩阵A。因此，在寻找方向向量时，系统的特性会得到反映。对于N维系统，这些共轭向量的最大数目是N。因此，CG方法最多需要N次迭代才能完全收敛到解。图1.17说明了CG程序。与最陡的梯度不同，只需两次迭代即可找到相同的解。有关CG方法的更深入的见解和实现细节，请参见Shewchuk[107]的注释。从我们的代码库中，可以在jet/include/cg.h和jet/include/detail/cg-inl.h中找到实现。
+
+![图1.17](image/图1.17.png)
+
+**图 1.17**
+
+共轭梯度过程的图解。灰线表示函数F的等熵线
+
+​		CG方法的实现细节，参见Shewchuk[107]的注释。从我们的代码库中，可以在jet/include/cg.h和jet/include/detail/cg inl.h中找到实现。为了进一步加速计算，有一种叫做“预处理”共轭梯度的方法。同样，Shewchuk[107]对算法的细节进行了很好的解释，但其思想是将预处理滤波器应用于系统，如
+
+​		为了进一步加速计算，有一种叫做“预处理”共轭梯度的方法。同样，Shewchuk[107]对算法的细节进行了很好的解释，但其思想是将预处理滤波器应用于系统，如
+$$
+M^{-1}Ax=M^{-1}b \tag{1.37}
+$$
+​		其中M是易于计算逆矩阵但仍然类似于A的预处理矩阵。拥有这样的M将使M^−1^A接近单位矩阵，并将使收敛速度快于常规CG方法。实施情况见附录A.1或jet/include/detail/cg inl.h。\\ TODO
+
+### 1.3.5  场（Field）
+
+​		到目前为止，我们一直在处理一个或两个向量。在本节中，我们将把重点扩展到整个空间，其中在空间中的每个点上定义标量或向量值。这种映射，即点到值的映射，称为场。如果我们把一个点映射到一个标量值，比如温度或压力，那就是一个标量场。如果我们把一个点映射到一个向量，那么它就变成了一个向量场。我们通常从天气报告中看到的热图是一个标量场。风或海流是矢量场。在本书中，字段主要用于描述流体的物理量。但它可以用于任何其他一般量，即使它们没有物理意义，比如颜色。
+
+​		为了使这个想法更有意义，让我们编写一些代码。以下是标量场和向量场的最小接口：
+
+```c++
+class Field3 {
+    public:
+    Field3();
+    
+    virtual ~Field3();
+};
+
+class ScalarField3 : public Field3 {
+    public:
+    ScalarField3();
+    
+    virtual ~ScalarField3();
+    
+    virtual double sample(const Vector3D& x) const = 0;
+};
+
+class VectorField3 : public Field3 {
+    public:
+    VectorField3();
+    
+    virtual ~VectorField3();
+    
+    virtual Vector3D sample(const Vector3D& x) const = 0;
+};
+```
+
+​		我们可以看到，我们有基类Field3来表示一个3D场。它不存储任何数据也不执行任何操作，但它只是层次结构的根。它由ScalarField3和VectorField3继承，它们定义了特定的标量和向量场接口。我们目前在两个抽象基类中都有一个虚拟函数示例；此函数表示将三维中的点映射为标量值或向量值的场
+
+​		我们现在可以扩展这些基类来实现实际场。例如，让我们定义一个标量函数，如下所示：
+$$
+f(x)=f(x,y,z)=sinx\cdot siny\cdot sinz\tag{1.38}
+$$
+​		其中，向量x是（x，y，z），f（x）是将x映射为标量值的标量函数。图1.18显示了此函数的外观。现在，我们可以通过覆盖前面定义的纯虚拟函数来实现此字段：
+
+```c++
+class MyCustomScalarField3 final : public ScalarField3 {
+    public:
+    double sample(const Vector3D& x) const override {
+        return std::sin(x.x) * std::sin(x.y) * std::sin(x.z);
+    }
+};
+```
+
+![图1.18](image/图1.18.png)
+
+**图 1.18**
+
+示例标量场f(x,y,z) = sinx siny sinz在z=pi/2处的横截面
+
+​		同样，我们也可以定义简单的向量场，其中
+$$
+F(x) = F(x,y,z)=(F_x,F_y,F_z) = (sinx\cdot siny,siny\cdot sinz,sinz\cdot sinx)\tag{1.39}
+$$
+​		根据方程式1.39，向量场F用黑体字表示，因为它将一个向量映射到另一个向量。它还以扩展向量形式（F~x~、F~y~、F~z~）编写，其中每个元素分别对应于F(x)~x~、F(x)~y~和F(x)~z~。图1.19说明了该字段的外观，等效代码可以写成：
+
+```c++
+class MyCustomVectorField3 final : public VectorField3 {
+    public:
+    Vector3D sample(const Vector3D& x) const override {
+        return Vector3D(std::sin(x.x) * std::sin(y),
+                        std::sin(x.y) * std::sin(z),
+                        std::sin(x.z) * std::sin(x));
+    }
+};
+```
+
+​		到目前为止，这是相当直观的。我们定义了将给定点映射到标量或向量值的标量和向量场。从现在起，我们将看到我们可以从场进行什么样的操作或测量。此操作将一个场转换为另一个场，该场测量给定场的不同特征。最常用的操作是**梯度、拉普拉斯**、**散度和旋度**。前两个操作主要应用于**标量场**，后两个操作仅适用于向量场。让我们了解一下这些操作符的含义以及如何实现它们
+
+#### 1.3.5.1 偏导数（Partial Derivative）
+
+​		在我们开始之前，让我们先谈谈偏导数，它是定义和理解本节将介绍的所有运算符的最重要的模块。有些读者可能会觉得这很熟悉，而有些读者则不会。因此，我将非常简短和非正式地解释基本思想，但如果您对学习更多感兴趣，请参阅向量微积分教科书[82101]以了解详细介绍。
+
+​		偏导数只不过是测量给定场在给定位置的切线的方法。但我们称之为“偏导数”，因为我们是沿着给定多维场的特定方向求导数。假设我们有一个标量场f（x）。要计算x=（x，y，z）处x轴的斜率，我们可以从以下等式开始：
+$$
+\frac{f(x+\triangle,y,z)-f(x,y,z)}{\triangle}\tag{1.40}
+$$
+​		式中，Δ是x方向上一个相当小的间隔。该方程简单地使用稍微向左和向右的点的场值，并将差值除以它们之间的间距。如果Δ变得很小，那么近似切线收敛到真实的切线，我们说这是x方向上x点的偏导数。该偏导数表示为
+$$
+\frac{\partial f}{\partial x}(x)\tag{1.41}
+$$
+​		因此，该过程就像将平行于x轴的给定标量场切片，并测量横截面的切线，如图1.20所示。类似地，我们可以将y和z方向导数写成
+$$
+\frac{\partial f}{\partial y}(y)
+$$
+​		以及
+$$
+\frac{\partial f}{\partial z}(z)
+$$
+现在假设我们有一个标量场，f(x，y，z)=xy+yz。当对某一轴取偏导数时，我们简单地将其它变量看作常量导数中的常数。因此∂f/∂x在这种情况下会得到
+$$
+\frac{\partial f}{\partial x}(x) = y\tag{1.42}
+$$
+因为(xy)'=y和(yz)'=0。对于y和z，我们可以应用相同的例程得到
+$$
+\frac{\partial f}{\partial y}(x)= x+z
+$$
+以及
+$$
+\frac{\partial f}{\partial z}(x)= y
+$$
+![图1.20](image/图1.20.png)
+
+**图 1.20**
+
+x轴和y轴的偏导数显示为2D场f(x，y)。每个导数都是横截面的斜率
+
