update to page 71

--- a/Computer Graphics/Books/流体引擎开发(个人翻译).md
+++ b/Computer Graphics/Books/流体引擎开发(个人翻译).md
@@ -1665,3 +1665,150 @@ $$
 
 x轴和y轴的偏导数显示为2D场f(x，y)。每个导数都是横截面的斜率
 
+​		此外，MyCustomScalarField中字段的偏导数，即f（x，y，z）=sin x sin y sin z，可以写成
+$$
+\frac{\partial f}{\partial x}(x) = cosx\cdot siny \cdot sinz
+$$
+
+$$
+\frac{\partial f}{\partial y}(x) = sinx\cdot cosy \cdot sinz
+$$
+
+$$
+\frac{\partial f}{\partial z}(x) = sinx\cdot siny \cdot cosz
+$$
+
+​		现在使用这些偏导数作为我们的基础，让我们来看看我们如何定义其他算子，从梯度开始。
+
+#### 1.3.5.2 梯度（Gradient）
+
+​		梯度算子测量标量场中的变化率和方向，如图1.21所示。从图中，请注意箭头指向“较高”区域，并垂直于等角线。这些是采样位置处最陡的坡度方向
+
+​		梯度算子表示为∇, 我们可以将运算符定义为：
+$$
+\gradient f(x) = (\frac{\partial f}{\partial x}(x),\frac{\partial f}{\partial y}(x),\frac{\partial f}{\partial z}(x))\tag{1.43}
+$$
+​		∂/∂x,，∂/∂y、 及∂/∂z是偏导数，如我们从方程1.41中看到的。所以根据定义，梯度算子就是所有方向上的偏导数。
+
+![图1.21](image/图1.21.png)
+
+图 1.21
+
+绘制等角线表示高度，梯度向量用箭头表示。高度场来自Matplotlib示例之一[54]。
+
+如果我们将梯度方程（1.43）应用于我们前面的示例标量场，它将变为
+$$
+\gradient f(x) = (cosx\cdot siny \cdot sinz,sinx\cdot cosy \cdot sinz,sinx\cdot siny \cdot cosz)\tag{1.44}
+$$
+要将此功能添加到现有类中，首先更新ScalarField3，如下所示：
+
+```c++
+class ScalarField3 : public Field3 {
+public:
+    ...
+    virtual Vector3D gradient(const Vector3D& x) const = 0;
+};
+```
+
+我们还可以将示例类MyCustomScalarField3更新为
+
+```c++
+class MyCustomScalarField3 : public ScalarField3 {
+public:
+    ...
+    Vector3D gradient(const Vector3D& x) const {
+    return Vector3D(std::cos(x.x) * std::sin(x.y) * std::sin(x.z),
+                        std::sin(x.x) * std::cos(x.y) * std::sin(x.z),
+                        std::sin(x.x) * std::sin(x.y) * std::cos(x.z));
+    }
+};
+```
+
+​		图1.22显示了代码的结果。您可以注意到箭头指向图1.18中的明亮区域，这是梯度定义所预测的。
+
+​		梯度算子通常与能量场一起使用。例如，如果我们把一个球放在不平的地面上，它会从一个较高的位置滚到较低的位置。作用在那个球上的力试图使重力势能最小化，或者换句话说，试图找到附近可能的最低能级（找低的地方滚）。因此，力与地面高度的梯度（地面的陡峭程度）成正比。另一个例子是我们经常从天气预报中看到的压力。我们知道风从高压区吹到低压区。这也与压力场的梯度有关。我们将在第1.7.2节中重新讨论该主题，在该节中我们将讨论流体动力学。
+
+ps：简而言之，人往高处走，球往低处滚，球上的力想要尽快的消耗球的重力势能，所以会往坡度更陡的方向滚，而这个方向就是梯度
+
+![图1.22](image/图1.22.png)
+
+**图 1.22**
+
+示例梯度场在z = pi/2处的横截面
+
+#### 1.3.5.3 散度（Divergence）
+
+​		让我们把焦点移到向量场。矢量场的一个重要测量是散度。对于向量场中的给定点，散度操作符使用标量值测量流入或流出流。想象一个非常小的立方体，假设我们在立方体的每个面上测量给定向量场的向量。如果向量的大小之和大于零，则表示立方体内部产生了一些流；因此，它是一个来源。如果总和小于零，那么某个东西正在吸收水流，这意味着它是一个水槽。总和的大小决定了产生或吸收的量。图1.23更直观地解释了这一想法。
+
+![图1.23](image/图1.23.png)
+
+**图 1.23**
+
+显示大小为 Δ x Δ x Δ 的立方体的图像。两个箭头表示+x和-x处的向量场
+
+​		为了测量散度，让我们从图1.23中的立方体开始。立方体的大小为Δ。因此，面面积为Δ^2^。现在通过 +x 面流入或流出的总流量为
+$$
+\triangle^2 F_x(x+\triangle,y,z)\tag{1.45}
+$$
+​		其中F=（F~x~，F~y~，F~z~）是输入向量场。因此，F~x~（x+Δ，y，z）是**+x面**上的x方向向量场。同样地，-x面上的x方向向量场为
+$$
+-\triangle^2 F_x(x,y,z)\tag{1.46}
+$$
+​		注意，我们使用负号，因为在这种情况下+是向内的方向。现在让我们对每个立方体面求和。然后我们将有
+$$
+sum=\triangle^2(F_x(x+\triangle,y,z)-F_x(x,y,z)\\
++F_y(x,y+\triangle,z)-F_y(x,y,z)\\
++F_z(x,y,z+\triangle)-F_z(x,y,z))
+$$
+​		上面的方程测量立方体的散度。实际上，它测量的是立方体整个体积的散度之和。我们把它除以立方体的体积，也就是Δ^3^，得到
+$$
+\frac{sum}{Volume}=\frac{F_x(x+\triangle,y,z)-F_x(x,y,z)}{\triangle}\\
++\frac{F_y(x,y+\triangle,z)-F_y(x,y,z)}{\triangle}\\
++\frac{F_z(x,y,z+\triangle)-F_z(x,y,z)}{\triangle}
+$$
+​		注意到一些图案了吗？是的，这就像x，y和z的近似偏导数之和（方程1.40）。因此，如果Δ足够小，我们就得到了散度算符：
+$$
+\divergence F(x) = \frac{\partial F_x}{\partial x}+\frac{\partial F_y}{\partial y}+\frac{\partial F_z}{\partial z}\tag{1.47}
+$$
+​		这里，散度算子表示为∇·。这个方程就像在给定的点上用算符和向量求点积一样：
+$$
+\divergence F(x) = (\frac{\partial}{\partial x},\frac{\partial}{\partial y},\frac{\partial}{\partial z})\cdot F(x) \tag{1.48}
+$$
+​		如果我们把这个散度算符应用到样本向量场F（x，y，z）=（sin x sin y，sin y sin z，sin z sin x），它将变成cos x sin y+cos y sin z+cos z sin x。要将此功能添加到VectorField3，让我们再向类添加一个虚拟函数：
+
+```c++
+class VectorField : public Field3 {
+public:
+    ...
+    virtual double divergence(const Vector3D& x) const = 0;
+};
+```
+
+​		我们示例类MyCustomVectorField3的函数的实际实现可以写成：
+
+```c++
+class MyCustomVectorField3 : public VectorField3 {
+public:
+    ...
+    double divergence(const Vector3D& x) const {
+    return std::cos(x.x) * std::sin(x.y)
+            + std::cos(x.y) * std::sin(x.z)
+            + std::cos(x.z) * std::sin(x.x);
+    }
+};
+```
+
+​		图1.24显示了代码的结果。原始矢量场（sinxsiny，sinysinz，sinzsinx）指向内部的点，散度告诉我们这些是汇。向量朝外的点也是如此。
+
+![图1.24](image/图1.24.png)
+
+**图 1.24**
+
+示例散度场在z=pi/2处的横截面
+
+#### 1.3.5.4 旋度（Curl）
+
+​		如果散度测量汇(sink)和源(source)，旋度计算给定点上矢量场的旋转流。如图1.25所示，想象xy平面中的一个小正方形。为了测量围绕该正方形的旋转，我们首先计算+y和-y之间x方向向量的差。然后，我们在+x和-x之间做相同的计算。最后，沿逆时针方向总结这些差异。我们可以把它写成一个近似方程
+$$
+(\frac{F_y(x+\triangle,y,z)-F_y(x,y,z)}{\triangle}-\frac{F_x(x,y+\triangle,z)-F_z(x,y,z)}{\triangle})k\tag{1.49}
+$$
