update to page 79

--- a/Computer Graphics/Books/流体引擎开发(个人翻译).md
+++ b/Computer Graphics/Books/流体引擎开发(个人翻译).md
@@ -1806,9 +1806,142 @@ public:
 
 示例散度场在z=pi/2处的横截面
 
-#### 1.3.5.4 旋度（Curl）
+#### 1.3.5.4 旋度（Curl）// TODO
 
 ​		如果散度测量汇(sink)和源(source)，旋度计算给定点上矢量场的旋转流。如图1.25所示，想象xy平面中的一个小正方形。为了测量围绕该正方形的旋转，我们首先计算+y和-y之间x方向向量的差。然后，我们在+x和-x之间做相同的计算。最后，沿逆时针方向总结这些差异。我们可以把它写成一个近似方程
 $$
 (\frac{F_y(x+\triangle,y,z)-F_y(x,y,z)}{\triangle}-\frac{F_x(x,y+\triangle,z)-F_z(x,y,z)}{\triangle})k\tag{1.49}
 $$
+![图1.25](image/图1.25.png)
+
+**图 1.25**
+
+用沿边缘的速度场表示的，尺寸为 Δ x Δ的正方形
+
+​		式中，Δ是我们从近似偏导数（方程式1.40）中看到的正方形宽度。如果我们将其扩展到非近似版本，*它将变成：
+$$
+rotation_z = (\frac{\partial F_y}{\partial x}-\frac{\partial F_x}{\partial y})k\tag{1.50}
+$$
+​		此方程式测量z轴上的旋转。如果我们进一步将此计算扩展到x轴和y轴，则旋度操作符可以定义为
+$$
+\curl F(x) = (\frac{\partial F_z}{\partial y}-\frac{\partial F_y}{\partial z})i+(\frac{\partial F_x}{\partial z}-\frac{\partial F_z}{\partial x})j+(\frac{\partial F_y}{\partial x}-\frac{\partial F_x}{\partial y})k\tag{1.51}
+$$
+​		与散度操作符类似∇x算子可以解释为取偏导数与场的叉积。
+$$
+\curl F(x) = (\frac{\partial}{\partial x},\frac{\partial}{\partial y},\frac{\partial}{\partial z})\cross F(x) \tag{1.52}
+$$
+​		旋度操作符的结果是一个向量。矢量的方向和大小分别对应于旋转轴和旋转量。因此，如果您找到一个长度较长的+x方向向量作为输出，则表示给定位置周围的向量场围绕+x轴旋转很多。例如，想象一个简单的向量场
+$$
+F(x,y,z)=(-y,x,0)\tag{1.53}
+$$
+​		如图1.26所示，该磁场绕z轴逆时针旋转。该场的旋度为
+$$
+F(x,y,z) = (0,0,2)\tag{1.54}
+$$
+​		它与z轴平行。如果将旋度算子应用于我们的样例向量场函数F（x，y，z）=（sin x sin y，sin y sin z，sin z sin x），它将变为(− siny cos z，− sinz cos x，− sinx cos y）。为了实现这一点，我们还向VectorField3添加了一个新的虚函数，并从子类中实现它。例如，我们的示例向量字段类MyCustomVectorField3可以实现为：
+
+```c++
+class MyCustomVectorField3 : public VectorField3 {
+public:
+    ...
+    Vector3D curl(const Vector3D& x) const {
+    return Vector3D(-std::sin(x.y) * std::cos(x.z),
+                        -std::sin(x.z) * std::cos(x.x),
+                        -std::sin(x.x) * std::cos(x.y));
+    }
+};
+```
+
+​		该代码的结果如图1.27所示
+
+![图1.27](image/图1.27.png)
+
+图1.27
+
+z=pi/4时示例旋度场的横截面
+
+#### 1.3.5.5 拉普拉斯（Laplacian）
+
+​		最后，让我们见见拉普拉斯。拉普拉斯算子测量给定位置的标量场值与附近平均场值的差异。换句话说，此运算符计算标量场上的“凹凸”。查看图1.28中的标量场示例。它显示类似于二维高度场的地形。然后，拉普拉斯算子的结果显示山尖，山谷的中心线用白色和黑色拉普拉斯值高亮显示。没有任何曲率的平面或坡度的拉普拉斯值为零（图像中的灰色区域）。
+
+![图1.28](image/图1.28.png)
+
+**图 1.28**
+
+（a）原始标量场
+
+（b）梯度场和
+
+（c）拉普拉斯场
+
+​		为了更深入地理解，让我们从梯度开始。再举一次上一个例子，图1.28（b）显示了梯度场，我们可以注意到，向量要么在非平面特征存在的区域收敛，要么扩展。现在，我们已经知道，衡量向量场收敛或扩展程度的算符是散度。因此，我们可以首先将梯度应用于原始标量场以获得中间向量场，然后应用散度来获得描述输入场凹凸性的最终标量场。这是拉普拉斯算子的定义，我们可以写成
+$$
+\laplacian f(x) = \divergence \gradient f(x) = \frac{\partial^2f(x)}{\partial x^2} + \frac{\partial^2f(x)}{\partial y^2} + \frac{\partial^2f(x)}{\partial y^2}\tag{1.55}
+$$
+ps：此处f(x)中的x是三维向量
+
+```c++
+    class ScalarField3 : public Field3 {
+    public:
+    ...
+    virtual double laplacian(const Vector3D& x) const = 0;
+    };
+```
+
+我们的示例类可以实现为：
+
+```c++
+class MyCustomScalarField3 : public Field3 {
+    public:
+    ...
+    double laplacian(const Vector3D& x) const {
+    return -std::sin(x.x) * std::sin(x.y) * std::sin(x.z)
+            -std::sin(x.x) * std::sin(x.y) * std::sin(x.z)
+            -std::sin(x.x) * std::sin(x.y) * std::sin(x.z);
+    }
+};
+
+```
+
+​		由于拉普拉斯算子测量峰值和边缘，该算子的一个流行应用是给定标量场的边缘检测，因为输出指示边缘的位置和陡峭程度。此外，如果我们获取该输出并对原始标量场进行加减，则可以模糊或锐化输入。如果我们回到前面的地形示例，则山尖具有负拉普拉斯值。如果我们将拉普拉斯场添加到原始地形场，它将降低尖端的最尖锐点，从而使特征点变暗和模糊。当你用拉普拉斯场进行减法时，会发生完全相反的事情，这会使原始图像锐化。图1.29显示了示例结果。
+
+![图1.29](image/图1.29.png)
+
+**图 1.29**
+
+示例拉普拉斯场在z=pi/2处的横截面
+
+### 1.3.6 插值（Interpolation）
+
+​		插值是从已知数据值计算未知值的近似过程。因为这本书的目标是用计算机模拟物理，所以连续和无限的真实世界由有限的数据点表示。因此，要使用这种离散样本进行物理计算，通常需要在数据不可用的情况下评估值。
+
+​		想象一辆汽车经过a到B，如图1.30所示，我们只记录了这两个检查站的位置。要想猜出这辆车在这两辆车之间的位置，其中一个选项就是画一条线，假设这辆车就在上面（图1.30b）。为了更好地猜测，我们可以考虑使用基于汽车位置和方向的曲线，如图1.30c所示。
+
+![图1.30](image/图1.30.png)
+
+**图 1.30**
+
+（a） 汽车的实际轨迹，（b）直线近似，（c）曲线近似。灰色汽车显示了两种不同近似方法在时间t的近似位置。
+
+​		与car示例类似，我们可以通过对低分辨率图像的像素进行插值来近似高分辨率图像。如图1.31所示，新像素的值是通过查找附近的低分辨率像素并用不同的权重对其进行平均来确定的。
+​		有不同的方法来确定权重，但直观地说，我们可以想象，相邻像素越近，加权平均值的贡献就越大。
+
+![图1.31](image/图1.31.png)
+
+**图 1.31**
+图（b）由图（a）插值得到
+
+​		上面的例子显示了我们在处理离散数据时遇到的非常常见的情况，我们可以编写通用插值代码，也可以应用于其他计算。当然，有各种不同特征的算法。但在下一节中，我们将介绍可用于许多其他数据处理应用程序的最通用和最常用的方法。
+
+#### 1.3.6.1 最近点（Nearest Point）
+
+​		通过取**最近**的**数据点的近似值**是插值的最简单方法。考虑下面的代码：
+
+```c++
+template<typename S, typename T>
+inline S nearest(const S& f0, const S& f1, T t) {
+    return (t < 0.5) ? f0 : f1;
+}
+```
+
+​		该代码包含三个参数。第一个参数f0是0处的值，第二个参数f1是1处的值。最后一个参数f是介于0和1之间的值。如果此f小于0.5，这意味着它更接近第一个参数，则返回f0。否则，它将更接近f1并返回它。图1.32说明了使用示例数据点时函数的外观。请注意，生成的图形是一组不相交的平面线段。该段从两个数据样本的右中点开始和结束，因为该方法采用最新的数据点进行插值。由于这种不连续性，该方法不适用于插值平滑函数，但适用于快速计算。
