update to page 98

--- a/Computer Graphics/Books/流体引擎开发(个人翻译).md
+++ b/Computer Graphics/Books/流体引擎开发(个人翻译).md
@@ -1,3 +1,5 @@
+[TOC]
+
 # 1  基础
 
 ​		本章涵盖了本书中经常提及的最基本的内容。在此之前，我们将介绍一个最小流体模拟器，使您对构建模拟引擎有一个基本的了解。然后我们开始建立在这本书中经常使用的数学基础和几何运算。本章还将介绍计算机生成动画的核心概念及其实现，然后将演变为基于物理的动画。最后，在本章末尾将介绍模拟流体模拟的一般过程。
@@ -1935,7 +1937,7 @@ class MyCustomScalarField3 : public Field3 {
 
 #### 1.3.6.1 最近点（Nearest Point）
 
-​		通过取**最近**的**数据点的近似值**是插值的最简单方法。考虑下面的代码：
+​		通过取**最近**的**数据点的值**来近似是插值的最简单方法。考虑下面的代码：
 
 ```c++
 template<typename S, typename T>
@@ -1945,3 +1947,435 @@ inline S nearest(const S& f0, const S& f1, T t) {
 ```
 
 ​		该代码包含三个参数。第一个参数f0是0处的值，第二个参数f1是1处的值。最后一个参数f是介于0和1之间的值。如果此f小于0.5，这意味着它更接近第一个参数，则返回f0。否则，它将更接近f1并返回它。图1.32说明了使用示例数据点时函数的外观。请注意，生成的图形是一组不相交的平面线段。该段从两个数据样本的右中点开始和结束，因为该方法采用最新的数据点进行插值。由于这种不连续性，该方法不适用于插值平滑函数，但适用于快速计算。
+
+![图1.32](image/图1.32.png)
+
+**图 1.32**
+
+对于给定的数据点（黑点），平面实线使用最近点法显示插值结果
+
+ps：（其实就是不插值）
+
+#### 1.3.6.2 线性插值（Linear Interpolation）
+
+​		线性插值，或通常简称为“lerp”，可能是最流行的方法，因为它简单有效，但在许多应用中仍能给出合理的结果。如图1.33所示，它通过一条线连接两个数据点来近似两个数据点之间的值。
+
+![图1.33](image/图1.33.png)
+
+**图 1.33**
+
+​		对于给定的数据点（黑点），直线使用线性方法显示插值结果
+
+代码可以直接编写。它实际上比上面的最近点近似更简单，因为新代码没有这样的条件语句
+
+```c++
+template<typename S, typename T>
+inline S lerp(const S& f0, const S& f1, T t) {
+    return (1 - t) * f0 + t * f1;
+}
+```
+
+​		现在，让我们考虑多维情况。我们希望在矩形或长方体中执行线性近似。这可以通过级联每个维度的线性插值来实现。如图1.34所示，首先沿x轴插值，然后对其余轴执行插值。2D线性插值通常称为双线性插值，下面的代码是该算法的实现
+
+```c++
+template<typename S, typename T>
+inline S bilerp(
+    const S& f00,
+    const S& f10,
+    const S& f01,
+    const S& f11,
+    T tx, T ty) {
+    return lerp(
+        lerp(f00, f10, tx),
+        lerp(f01, f11, tx),
+        ty);
+}
+```
+
+![图1.34](image/图1.34.png)
+
+**图 1.34**
+
+显示点（tx，ty）（a）处双线性和点（tx，ty，tz）（b）处三线性插值的图像。
+
+​		同样的想法可以扩展到3D（称为三线性插值），如下所示。
+
+```c++
+template<typename S, typename T>
+inline S trilerp(
+    const S& f000,
+    const S& f100,
+    const S& f010,
+    const S& f110,
+    const S& f001,
+    const S& f101,
+    const S& f011,
+    const S& f111,
+    T tx,
+    T ty,
+    T tz) {
+    return lerp(
+        bilerp(f000, f100, f010, f110, tx, ty),
+        bilerp(f001, f101, f011, f111, tx, ty),
+        tz);
+}
+```
+
+​		无论以何种顺序执行插值，都可以轻松验证结果是否相同。上面的代码首先取x轴，然后是y轴和z轴。但你颠倒顺序并不重要。如果展开级联函数，将注意到每个角点值都乘以插值点另一侧的面积（2D）或体积（3D）。图1.35更直观地说明了这意味着什么。
+
+![图1.35](image/图1.35.png)
+
+**图 1.35** 
+
+通过权重解释双线性插值
+
+#### 1.3.6.3 Catmull-Rom样条插值（Catmull-Rom Spline Interpolation）
+
+​		要执行线性插值，我们只需要两个数据点。但是，如果我们有更多的数据，这样我们就可以向插值代码提供更多的信息，那该怎么办呢？它会产生更好的近似值吗？
+
+​		Catmull–Rom样条插值是经典插值方法之一[27]，它生成样条曲线来插值中间值。假设我们有四个具有均匀间距的数据点，我们可以首先从通过这些点的三阶多项式函数开始：
+$$
+f(t) = a_3t^3 + a_2t^2 +a_1t+a_0\tag{1.56}
+$$
+​		该函数的输入是一个参数变量t，它介于0和1之间。然后，输出f（t）由多项式函数定义。我们目前不知道a0、a1、a2和a3是什么，但假设四个给定点f0、f1、f2和f3对应于t=分别为−1、0、1和2。因此，我们现在知道a0是f1。
+
+​	我们也可以取v（t）的导数：
+$$
+v'(t) = d(t) = 3a_3t^2+2a_2t+a_1\tag{1.57}
+$$
+​		我们在t=0和1时用
+$$
+d(0)=d_1 = (f_2-f_0)/2\\
+d(1) =d_2=(f_3-f_1)/2
+$$
+​		这意味着d1和d2是0和1处的平均斜率。这也给出了a1的解，即d1=（f2− f0）/2。现在剩下的未知数是a2和a3。可通过设置t=1并求解线性方程组来计算这些值：
+$$
+f_2 = a_3+a_2+a_1+a_0\\
+d_2=3a_3+2a_2+a_1
+$$
+​		求解这些方程将得到以下代码：
+
+```c++
+template <typename S, typename T>
+inline S catmullRomSpline(
+    const S& f0,
+    const S& f1,
+    const S& f2,
+    const S& f3,
+    T f) {
+    S d1 = (f2 - f0) / 2;
+    S d2 = (f3 - f1) / 2;
+    S D1 = f2 - f1;
+    
+    S a3 = d1 + d2 - 2 * D1;
+    S a2 = 3 * D1 - 2 * d1 - d2;
+    S a1 = d1;
+    S a0 = f1;
+    
+    return a3 * cubic(f) + a2 * square(f) + a1 * f + a0;
+}
+```
+
+​		如图1.36所示，与线性插值相比，代码给出了更平滑和连续的近似值。当然，除了线性或Catmull–Rom样条方法外，还有各种插值方法。根据数据的应用和约束，可以选择更合适的插值方法。阅读Boor的书[18]或访问Bourke的网站[19]，了解插值的更多细节。
+
+------------------------------
+
+## 1.4 几何（Geometry）
+
+​		在模拟流体时，我们通常需要设置流体的初始形状或定义与流体体交互的实体对象。在本节中，我们将实现开发流体引擎时经常使用的常见几何数据类型和操作
+
+### 1.4.1 面（Surface）
+
+​		在本书中，最重要的几何体类型是surface。曲面支持的一些基本操作包括从任意点查询曲面上最近的点、从该点测量曲面法线以及执行光线-曲面相交测试。Ray是表示具有一个端点的线的数据类型，如图1.37所示。
+
+​		为了支持基本查询，可以如下所示定义类Surface3。
+
+```c++
+struct SurfaceRayIntersection3 {
+    bool isIntersecting;
+    double t;
+    Vector3D point;
+    Vector3D normal;
+};
+
+class Surface3 {
+    public:
+    Surface3();
+    
+    virtual ~Surface3();
+    
+    virtual Vector3D closestPoint(const Vector3D& otherPoint) const = 0;
+    
+    virtual Vector3D closestNormal(const Vector3D& otherPoint) const = 0;
+    
+    virtual BoundingBox3D boundingBox() const = 0;
+    
+    virtual void getClosestIntersection(
+        const Ray3D& ray,
+        SurfaceRayIntersection3* intersection) const = 0;
+    
+    virtual bool intersects(const Ray3D& ray) const;
+    
+    virtual double closestDistance(const Vector3D& otherPoint) const;
+};
+
+bool Surface3::intersects(const Ray3D& ray) const {
+    SurfaceRayIntersection3 i;
+    getClosestIntersection(ray, &i);
+    return i.isIntersecting;
+}
+
+double Surface3::closestDistance(const Vector3D& otherPoint) const {
+    return otherPoint.distanceTo(closestPoint(otherPoint));
+}
+```
+
+​		请注意，BoundingBox3是一种三维轴对齐的AABB盒（axis-aligned bounding box），本质上是盒子的两个角点。Ray3D是具有光线原点和方向的类。最后，SurfaceRayIntersection3 是一个简单的结构体，它保存光线-曲面相交信息，例如从光线原点到交点（t）的距离、交点本身以及相交处的曲面法线。
+
+​		可以通过重写上面显示的虚拟函数来扩展上面的基类。例如，球体几何体可以实现为：
+
+```c++
+class Sphere3 final : public Surface3 {
+    public:
+    Sphere3(const Vector3D& center, double radius);
+    
+    Vector3D closestPoint(const Vector3D& otherPoint) const override;
+    
+    Vector3D closestNormal(const Vector3D& otherPoint) const override;
+    
+    void getClosestIntersection(
+        const Ray3D& ray,
+        SurfaceRayIntersection3* intersection) const override;
+    
+    BoundingBox3D boundingBox() const override;
+    
+    private:
+    Vector3D _center;
+    double _radius = 1.0;
+};
+
+Vector3D Sphere3::closestPoint(const Vector3D& otherPoint) const {
+    return _radius * closestNormal(otherPoint) + _center;
+}
+
+Vector3D Sphere3::closestNormal(const Vector3D& otherPoint) const {
+    if (_center.isSimilar(otherPoint)) {
+        return Vector3D(1, 0, 0);
+    } else {
+        return (_center - otherPoint).normalized();
+    }
+}
+
+BoundingBox3D Sphere3::boundingBox() const {
+    Vector3D r(_radius, _radius, _radius);
+    return BoundingBox3D(_center - r, _center + r);
+}
+```
+
+​		另一种常用的曲面类型是三角形网格，如图1.38所示。使用网格，可以表示广泛的几何图形，例如艺术家创建的对象或计算机视觉算法重建的场景。从代码库中，三角形及其网格分别实现为**Triangle3**和**TriangleMesh3**。这两个类的实现细节不会在本书中列出，但基本接口如下所示：
+
+![图1.38](image/图1.38.png)
+
+**图 1.38**
+
+斯坦福兔模型中的三角形网格示例
+
+```c++
+class Triangle3 final : public Surface3 {
+    public:
+    std::array<Vector3D, 3> points;
+    std::array<Vector3D, 3> normals;
+    std::array<Vector2D, 3> uvs;
+
+    Triangle3();
+
+    Triangle3(
+        const std::array<Vector3D, 3>& newPoints,
+        const std::array<Vector3D, 3>& newNormals,
+        const std::array<Vector2D, 3>& newUvs);
+
+    Vector3D closestPoint(const Vector3D& otherPoint) const override;
+
+    Vector3D closestNormal(const Vector3D& otherPoint) const override;
+
+    void getClosestIntersection(
+        const Ray3D& ray,
+        SurfaceRayIntersection3* intersection) const override;
+
+    bool intersects(const Ray3D& ray) const override;
+
+    BoundingBox3D boundingBox() const override;
+
+    ...
+};
+
+class TriangleMesh3 final : public Surface3 {
+    public:
+    typedef Array1<Vector2D> Vector2DArray;
+    typedef Array1<Vector3D> Vector3DArray;
+    typedef Array1<Point3UI> IndexArray;
+
+    TriangleMesh3();
+
+    TriangleMesh3(const TriangleMesh3& other);
+
+    Vector3D closestPoint(const Vector3D& otherPoint) const override;
+
+    Vector3D closestNormal(const Vector3D& otherPoint) const override;
+
+    void getClosestIntersection(
+        const Ray3D& ray,
+        SurfaceRayIntersection3* intersection) const override;
+
+    F Cat #K25519 — K25519_C001 — page 67 — 10/22/2016 — 15:24
+        sics 67
+        BoundingBox3D boundingBox() const override;
+
+    bool intersects(const Ray3D& ray) const override;
+
+    double closestDistance(const Vector3D& otherPoint) const override;
+
+    ...
+
+        private:
+    Vector3DArray _points;
+    Vector3DArray _normals;
+    Vector2DArray _uvs;
+    IndexArray _pointIndices;
+    IndexArray _normalIndices;
+    IndexArray _uvIndices;
+
+    ...
+};
+```
+
+​		代码库中还提供了其他曲面类型，如Box3和Plane3。请参阅代码库以了解更多信息。
+
+### 1.4.2 隐式表面（Implicit Surface）
+
+对于平面或三角形网格等曲面，曲面上的一个点是明确定义的，这意味着我们可以编写一个方程，如
+$$
+x=f(t_1,t_2,\cdots)\tag{1.58}
+$$
+​		其中t~i~是输入参数，x是曲面上的点。例如，对于球形曲面，可以使用两个参数来定位点。如图1.39所示，想象一对纬度和经度可以定义地球上的地理坐标。此类曲面擅长于某些操作，如测量几何体的边界框或可视化其形状。但是，诸如测试任意点是否位于曲面内部或测量最近曲面法线之类的操作,在使用这种表示的情况下，通常比较复杂，或者效率低下
+
+​		定义曲面以有效处理此类计算的另一种方法是使用隐式函数。隐式方法不是将参数直接映射到曲面上的点，而是使用一个函数来告知输入点是否在曲面上。例如，可以使用距离函数表示球体
+$$
+f(x) =|x-c|-r\tag{1.59}
+$$
+​		其中x是空间中的任意点，c是球体的中心，r是球体的半径。此函数测量到曲面的最近距离，因此满足f（x）=0的一组点位于球面上。请注意，如果f（x）<0，则表示该点位于曲面内部，而f（x）>0表示位于曲面外部。因此，评估曲面的内部/外部变得非常简单。这种函数称为**“有向距离”函数或场（SDF）。**
+
+![图1.39](image/图1.39.png)
+
+**图 1.39**
+
+​		具有两种不同曲面类型，球体(a）使用半径、纬度和经度显式表示，球体(b）使用距离场的隐式表示。
+
+​		不需要使用SDF定义隐式曲面，但使用SDF对于许多其他操作具有许多优点。例如，只需从SDF中减去一个常数，即可挤出曲面，如图1.40所示。这种操作的一个应用程序可以从文本中找到。要绘制具有轮廓或辉光效果的样式良好的文本，将矢量格式的字体转换为有向距离场[61]。// TODO这里的有点不太清楚在说什么
+
+​		It is not required to define implicit surfaces with SDF, but using SDF has many advantages for many other operations. For example, simply subtracting a constant from an SDF will extrude the surface as shown in Figure 1.40. One of the applications of such an operation can be found from the text rendering. To draw nicely styled text with outlines or glow effect, a font in a vector format is converted into a signed-distance field [61].
+
+![图1.40](image/图1.40.png)
+
+**图 1.40**
+
+用c拉伸一维有向距离场相当于减去一个常量值c
+
+​		另一个示例是曲面法线的计算。由于SDF始终返回到曲面上最近点的距离，因此曲面上SDF的梯度是曲面法线，因此
+$$
+n=\frac{\gradient f(x)}{|\gradient f(x)|}\tag{1.60}
+$$
+​		最后，两个SDF之间的布尔运算只是从两个函数中取最小值或最大值的问题。例如，h=min（f，g）表示两个SDF，f和g的并集。用从f中减去g，可以使用h=max（f，−g）。
+
+​		要实现隐式曲面，我们可以使用以下基类：
+
+```c++
+class ImplicitSurface3 : public Surface3 {
+    public:
+    ImplicitSurface3();
+    
+    virtual ~ImplicitSurface3();
+    
+    virtual double signedDistance(const Vector3D& otherPoint) const = 0;
+};
+```
+
+​		如您所见，该类向抽象基类Surface3添加了另一个虚拟函数signedDistance。例如，球体的隐式版本可以写成：
+
+```c++
+class ImplicitSphere3 final : public ImplicitSurface3 {
+    public:
+    ImplicitSphere3(const Vector3D& center, double radius);
+    
+    double signedDistance(const Vector3D& otherPoint) const override;
+    
+    ...
+};
+
+double ImplicitSphere3::signedDistance(const Vector3D& otherPoint) const{
+    return _center.distanceTo(otherPoint) - _radius;
+}
+```
+
+### 1.4.3 隐式表面转换为显式表面（Implicit Surface to Explicit Surface）
+
+​		由于显式曲面和隐式曲面都有各自的属性，因此通常需要将它们转换为另一个。例如，只有通过执行光线跟踪才能直接可视化隐式曲面[74]。但是使用光栅化的经典或渲染管道，包括OpenGLR或DirectXR，通常需要显式表示，尤其是使用三角形网格。因此，我们需要一种将隐式曲面转换为显式网格的方法。
+
+​		这种转换最流行的方法是marching cubes方法[76]。该方法从一个网格开始，其中每个网格点都有采样的隐式曲面函数。然后，如果八个网格单元角点之间存在符号差异，则该算法迭代网格单元并创建三角形。
+
+![图1.41](image/图1.41.png)
+
+**图 1.41**
+
+二维隐式场的六种可能情况。拐角处的黑点和白点分别表示正值和负值。虚线是重建的显式曲面，箭头是曲面法线。
+
+ps：负值表示有物体存在
+
+​		为了简化这个问题，让我们考虑一个2D曲面。图1.41说明了网格单元可能具有的所有情况。在这些情况下，请注意，如果有任何栅格点具有与其他栅格点不同的符号，则表示曲面正在通过该栅格单元。在这种情况下，我们可以在包含不同符号的边之间绘制线（3D中的三角形），并且这些线（同样，3D中的三角形）从每个网格单元的集合将是隐式函数的显式表示。确定边上新创建顶点的位置时，可以使用线性近似。图1.42显示了隐式曲面场中marching cubes（或marching squares）的示例结果。
+$$
+x=\frac{|\phi_{left}|}{|\phi_{left}|+|\phi_{right}|}
+\tag{1.62}
+$$
+![图1.42](image/图1.42.png)
+
+图 1.42
+
+来自marching cubes的示例结果。拐角处的黑点和白点分别表示正值和负值。较小的点和虚线表示重建的显式曲面。
+
+### 1.4.4 显式表面转换为隐式表面（Explicit Surface to Implicit Surface）
+
+将常规显式曲面转换为隐式曲面很简单。考虑下面的代码。
+
+```c++
+class SurfaceToImplicit3 final : public ImplicitSurface3 {
+public:
+    explicit SurfaceToImplicit3(const Surface3Ptr& surface);
+    
+    double signedDistance(const Vector3D& otherPoint) const override;
+    
+    ...
+        
+private:
+    Surface3Ptr _surface;
+};
+
+double SurfaceToImplicit3::signedDistance(
+    const Vector3D& otherPoint) const {
+    Vector3D x = _surface->closestPoint(otherPoint);
+    Vector3D n = _surface->closestNormal(otherPoint);
+    if (n.dot(otherPoint - x) < 0.0) {
+        return -x.distanceTo(otherPoint);
+    } else {
+        return x.distanceTo(otherPoint);
+    }
+}
+```
+
+​		适应类SurfaceToImplicit3采用显式曲面并返回到曲面的有向距离场。从给定点开始，它首先测量距离显式曲面最近的点和法线。如果从最近点到给定点的向量朝向与曲面法线相反的方向，则该向量位于曲面内部，因此返回负距离。如果不是，则该点位于曲面外部，返回正距离。然而，这种方法假设closestPoint和closestNormal的计算成本较低。
+
+​		测量到三角形网格的最近距离也是相同的。为了确定符号，我们还可以查询最近点（ closest point）的曲面法线，并使用点积查看该点是否位于曲面的另一侧。然后，我们还可以设置一个网格，并将测量的距离和符号指定给每个网格点。不过，最有问题的部分是确定符号。特别是当曲面没有完全封闭（有孔）或网格的曲面法线没有很好定义时，会形成
+
+​		测量到三角形网格的最近距离也是相同的。为了确定符号，我们还可以查询最近点的曲面法线，并使用点积查看该点是否位于曲面的另一侧。然后，我们还可以设置一个网格，并将测量的距离和符号指定给每个网格点。不过，最有问题的部分是确定符号。特别是当曲面没有完全封闭（有孔）或网格的曲面法线没有很好地定义时，无法保证有向距离场的形成（只能稳健地生成距离场）。为了处理如此广泛的任意输入，可以考虑稳定的曲面重建技术[106]。为了简单起见，我们可以假设输入网格没有任何孔，*并应用Bærentzen和Aanæs[8]中的角度加权法线方法（angle-weighted normal method）。
+
+## 1.5 动画（Animation）
+
