update to page 97

--- a/Computer Graphics/Books/流体引擎开发(个人翻译).md
+++ b/Computer Graphics/Books/流体引擎开发(个人翻译).md
@@ -2377,5 +2377,140 @@ double SurfaceToImplicit3::signedDistance(
 
 ​		测量到三角形网格的最近距离也是相同的。为了确定符号，我们还可以查询最近点的曲面法线，并使用点积查看该点是否位于曲面的另一侧。然后，我们还可以设置一个网格，并将测量的距离和符号指定给每个网格点。不过，最有问题的部分是确定符号。特别是当曲面没有完全封闭（有孔）或网格的曲面法线没有很好地定义时，无法保证有向距离场的形成（只能稳健地生成距离场）。为了处理如此广泛的任意输入，可以考虑稳定的曲面重建技术[106]。为了简单起见，我们可以假设输入网格没有任何孔，*并应用Bærentzen和Aanæs[8]中的角度加权法线方法（angle-weighted normal method）。
 
+注：完全封闭且无孔的网格通常称为“水密”网格（Meshes that are perfectly closed without any holes are often called “watertight” meshes）
+
 ## 1.5 动画（Animation）
+
+​		在计算机图形学中，通过生成给定时间序列的一系列图像来创建动画[81]。例如，图1.43显示了一个反弹球动画中的两个图像。对于给定的时间序列0、1和2秒，将球的相应位置和形状绘制到图像中。在此特定示例中，两个相邻图像之间的时间间隔为1秒。通常，我们使用的时间间隔要小得多，例如1/24、1/30或1/60，这样在以相同速度播放图像序列时，它看起来更平滑。当引用图像序列的时间戳时，我们使用“帧”。对于图1.43，第0帧对应于第一幅图像，第1帧对应于下一幅图像。由于该示例的时间间隔为1秒，因此回放将显示每秒1帧，或者简言之，1 FPS。如果两帧之间的时间间隔为1/60，则我们称动画的帧速率为60 FPS。
+
+![图1.43](image/图1.43.png)
+
+**图 1.43**
+
+反弹球动画中的图像序列
+
+现在是再次编码的时候了。让我们从保存帧数据的非常简单的结构开始：
+
+```c++
+struct Frame final {
+    unsigned int index = 0;
+    double timeIntervalInSeconds = 1.0 / 60.0;
+    
+    double timeInSeconds() const {
+        return count * timeIntervalInSeconds;
+    }
+    
+    void advance() {
+        ++index;
+    }
+    
+    void advance(unsigned int delta) {//注意是无符号整型
+        index += delta;
+    }
+};
+```
+
+​		这段代码非常简单。该结构包含一个整数索引，表示其在时间轴中的时间顺序（图1.44）。此外，成员变量 **timeIntervalInSeconds** 存储帧之间的时间间隔。我们将假设系统对整个动画使用固定的时间间隔，因此如果我们想知道以秒为单位的当前时间，我们可以简单地将变量计数和 **timeIntervalInSeconds** 相乘，如成员函数 **timeInSeconds** 中所示。另外，最后两个函数是简单的辅助函数，它们将此帧类视为帧序列的前向迭代器。
+
+​		如图1.44所示，动画过程的核心是显示帧序列。如果我们为这样一个进程编写一个伪代码，它将如下所示：
+
+```c++
+Frame frame;
+
+while (!quit) {
+    processInput();
+    updateScene(frame);
+    renderScene(frame);
+    
+    frame.advance();
+}
+```
+
+​		对于每个帧，while循环首先处理传入的用户输入，更新场景对象，然后渲染结果。函数updateScene只需迭代所有场景对象，并使用当前帧信息更新其状态。在本书中，重点将放在updateScene函数上，该函数可以写成：
+
+```c++
+void updateScene(const Frame& frame) {
+    for (auto& animation: animations) {
+        animation->update(frame);
+    }
+}
+```
+
+![图1.44](image/图1.44.png)
+
+**图 1.44**
+
+显示了帧序列、帧索引和时间间隔
+
+​		我们假设场景中的所有动画都存储在列表中，我们只需通过调用update函数对其进行迭代以更新单个动画，该函数可能会更新每个动画对象的内部数据。要定义动画对象类型，我们可以编写：
+
+```c++
+class Animation {
+public:
+    ...
+
+    void update(const Frame& frame) {
+    // Some pre-processing here..
+
+    onUpdate(frame);
+
+    // Some post-processing here..
+    }
+
+protected:
+    virtual void onUpdate(const Frame& frame) = 0;
+};
+```
+
+​		这是本书中定义动画的所有对象的抽象基类。正如您所看到的，我们有一个公共函数update和一个受保护但纯虚的函数onUpdate。当外部调用“update”时，它将执行一些内部预处理工作（例如日志记录）并调用特定于子类的onUpdate。此onUpdate函数的目标是“更新”给定帧的内部状态。
+
+​		例如，可以继承类动画，如下所示，以定义自己的动画类：
+
+```c++
+class SineAnimation final : public Animation {
+    public:
+    double x = 0.0;
+    
+    protected:
+    void onUpdate(const Frame& frame) override {
+        x = std::sin(frame.timeInSeconds());
+    }
+};
+```
+
+​		我们可以看到，这个类有一个double变量来存储当前动画状态。你可以想象这代表了一个球的中心位置。update将当前时间通过sin函数映射到空间产生振荡运动。您可以测试SineAnimation类实例，如下所示。
+
+```c++
+SineAnimation sineAnim;
+for (Frame frame; frame.index < 240; frame.advance()) {
+    sineAnim.update(frame);
+    
+    // Write data to disk
+}
+```
+
+​		这段代码可以在src/manual_tests/animation_tests.cpp中找到，图1.45（a）显示了这段简单代码的结果。您可以看到，该代码生成正弦波的动画，并且可以用于生成类似弹簧的运动。基于这个最小的示例，让我们对代码进行一些调整，如下所示。
+
+```c++
+class SineWithDecayAnimation final : public Animation {
+    public:
+    double x = 0.0;
+    
+    protected:
+    void onUpdate(const Frame& frame) override {
+        double decay = 1.0 / frame.timeInSeconds();
+        x = std::sin(frame.timeInSeconds()) * decay;
+    }
+};
+```
+
+![图1.45](image/图1.45.png)
+
+**图 1.45**
+
+显示自定义动画类（a）SineAnimation测试和（b）SineWithDecayAnimation的状态跟踪。横轴表示时间，而纵轴表示x的值。
+
+​		如图1.45b所示，我们现在使正弦函数随时间衰减。新动画看起来像一个带有阻尼运动的弹簧。
+
+​		从下面几节中，我们将看到如何扩展这个基本界面来创建物理动画，这将是流体模拟引擎的基础。
 
