--- a/Computer Graphics/Books/流体引擎开发(个人翻译).md
+++ b/Computer Graphics/Books/流体引擎开发(个人翻译).md
@@ -2514,3 +2514,278 @@ class SineWithDecayAnimation final : public Animation {
 
 ​		从下面几节中，我们将看到如何扩展这个基本界面来创建物理动画，这将是流体模拟引擎的基础。
 
+## 1.6 基于物理的动画 （Physics-Based Animation）
+
+​		在计算机图形学中，基于物理的动画是对火、烟、雨或风等自然现象的模仿。它可以模拟各种类型的材质，如固体、水、气体，甚至织物或毛发。因此，流体动画背后的大部分思想都继承自基于物理的动画，本节将介绍如何实现基于物理的动画引擎。
+
+### 1.6.1 入门（Getting Started）
+
+​		如果您还记得我们的第一个动画示例 **SineAnimation**，我们使用正弦函数将输入时间直接映射到位置状态。它不依赖于任何帧的其他数据或状态。因此，您可以随机选取一帧来知道相应的位置，而无需按时间顺序调用update函数。其他类型的动画（如关键帧动画）也具有相同的特性。相反，基于物理的动画取决于前一帧的状态。在我们深入了解更多细节之前，让我们先看看下面定义物理动画关键界面的代码：
+
+```c++
+class PhysicsAnimation : public Animation {
+    ...
+        
+protected:
+    virtual void onAdvanceTimeStep(double timeIntervalInSeconds) = 0;
+
+private:
+    Frame _currentFrame;
+    
+    void onUpdate(const Frame& frame) final;
+    
+    void advanceTimeStep(double timeIntervalInSeconds);
+};
+
+void PhysicsAnimation::onUpdate(const Frame& frame) {
+    if (frame.index > _currentFrame.index) {
+        unsigned int numberOfFrames = frame.index - _currentFrame.index;
+        
+        for (unsigned int i = 0; i < numberOfFrames; ++i) {
+            advanceTimeStep(frame.timeIntervalInSeconds);
+        }
+        
+        _currentFrame = frame;
+    }
+}
+```
+
+​		如您所见，我们正在重写动画中的**onUpdate**函数，它再次调用私有成员函数**advanceTimeStep**，如果输入帧比当前帧新，该函数将提前一帧。但在倒带的情况下，新输入帧比前一帧旧，它不会执行任何模拟*
+
+​		一旦我们通过一些代码，它将变得更自然，但与前面的动画示例不同，基于物理的动画依赖于过去的状态，下一个状态由前一个状态定义。想想台球的动态。主球将击中另一个球，该事件将传播到其他球。这是一系列的因果关系，随着时间的推移而演变。这是动力学的基本原理之一，主要是关于力和运动之间的因果关系。这就是PhysicsAnimation类采用渐进方式更新其状态的原因。
+
+​		还请注意，当输入帧与最后一个模拟帧的距离超过一帧（即快进场景）时，我们采用固定时间间隔的多个步骤，而不是采用单个巨大的时间步。一旦我们看到实际的模拟代码是如何工作的，它将变得更加清晰，但一般来说，采取三个小的时间步并不等于采取三倍大的时间步。因此，使用了多个步骤，以使模拟输出保持一致。
+
+### 1.6.2 物理动画示例（Physics Animation with Example）
+
+​		基类**PhysicsAnimation**确实为我们提供了一些关于物理模拟的见解，但它仍然过于抽象。为了更好地理解基于物理的动画，我们将实现一个简单但功能齐全的物理解算器。这项实施将包括：
+
+1. 如何表示物理状态
+2. 如何计算力
+3. 如何计算运动
+4. 如何应用约束并与障碍物交互
+
+这些是任何类型的物理引擎开发最需要的核心主题，我们将在本书中开发的代码也将遵循相同的思想
+
+#### 1.6.2.1 选择模型（Choosing a Model）
+
+​		首先，我们需要选择要设置动画的仿真模型。如果我们能马上从一个流体模型开始，那就太好了，但是让我们从更简单的开始。在这个特定的例子中，我们将使用弹簧质点模型来演示这些关键思想是如何实现的。在这个模型中，我们有质量点，这些质量点由弹簧连接，就像一条链子，这个系统受到重力和空气的影响。由于这些弹簧，每个质点都可以与其相邻质点保持相对距离。此外，重力会将点拉向地面，空气阻力会减慢点的运动。这些点可能与墙或楼板等障碍物碰撞。图1.46详细说明了该配置。虽然这不完全是一个流体模拟器，但它是模拟可变形对象的最简单和最广泛使用的模型之一。
+
+![图1.46](image/图1.46.png)
+
+**图 1.46**
+
+所示为弹簧质点模型示例。黑点是质点，锯齿形线段是弹簧，请注意，最上面的点附着在固定块上
+
+#### 1.6.2.2 模拟状态（Simulation State）
+
+​		我们现在有一个模型来模拟。下一步是定义模拟状态。如图1.46所示，系统由许多运动质点组成。因此，应该有一个数组来存储点的位置和速度。此外，根据作用在点上的力，点可以有加速或减速运动，我们可以添加另一个数组来保存力数据。最后，还应存储两点之间的连通性，如图的边。基于这些要求，我们的新类**SimpleMassSpringAnimation**的第一个外观如下所示。
+
+```c++
+class SimpleMassSpringAnimation : public PhysicsAnimation {
+public:
+    struct Edge {
+        size_t first;
+        size_t second;
+    };
+    
+    std::vector<Vector3D> positions;
+    std::vector<Vector3D> velocities;
+    std::vector<Vector3D> forces;
+    std::vector<Edge> edges;
+    
+    SimpleMassSpringAnimation(size_t numberOfPoints = 10) {
+        size_t numberOfEdges = numberOfPoints - 1;
+        
+        positions.resize(numberOfPoints);
+        velocities.resize(numberOfPoints);
+        forces.resize(numberOfPoints);
+        edges.resize(numberOfEdges);
+        
+        for (size_t i = 0; i < numberOfPoints; ++i) {
+            positions[i].x = static_cast<double>(i);
+        }
+        
+        for (size_t i = 0; i < numberOfEdges; ++i) {
+            edges[i] = Edge{i, i + 1};
+        }
+    }
+    
+protected:
+    void onAdvanceTimeStep(double timeIntervalInSeconds) override {
+        ...
+    }
+};
+```
+
+​		在本课程中，我们将位置、速度和力表示为三维矢量。数组的每个第i个元素表示第i个质点，弹簧连接由索引对数组表示。这些状态数据在构造函数中初始化。在本例中，代码是水平链接点，但您可以让它具有任意位置和连通性。对于单位，我们将使用MKS-米表示长度，千克表示质量，秒表示时间。除了成员数据之外，我们还可以注意到该类正在重写PhysicsAnimation类onAdvanceTimeStep中的虚拟函数。这将是我们实现mass-spring模型的核心逻辑的地方，更新我们刚刚定义的每个帧的状态。
+
+#### 1.6.2.3 力和运动（Force and Motion）
+
+​		既然我们现在有了状态，让我们来谈谈运动。根据牛顿第二运动定律，加速度由点的质量和作用在点上的力决定：
+$$
+F=ma\tag{1.63}
+$$
+式中，F、m和a分别为力、质量和加速度。在大多数情况下，力和加速度是输入，加速度是计算量。因此，跟踪运动和更新状态的过程从了解系统中的力开始。在这个例子中，我们将积累不同种类的力，但是我们假设现在我们知道有多少力被施加到这些点上。请看下面的代码。
+
+```c++
+double mass = 1.0;
+...
+void onAdvanceTimeStep(double timeIntervalInSeconds) override {
+    size_t numberOfPoints = positions.size();
+    
+    // Compute force
+    for (size_t i = 0; i < numberOfPoints; ++i) {
+        forces[i] = ...
+    }
+    
+    // Update states
+    for (size_t i = 0; i < numberOfPoints; ++i) {
+        // Compute new states
+        Vector3D newAcceleration = forces[i] / mass;
+        Vector3D newVelocity = ...
+            Vector3D newPosition = ...
+            
+            // Update states
+            velocities[i] = newVelocity;
+        positions[i] = newPosition;
+    }
+    
+    // Apply constraints
+    ...
+}
+```
+
+​		此代码显示**SimpleMassSpringAnimation**类的**AdvanceTimeStep**函数的实现。同样，此函数的目的是以增量方式更新给定时间间隔**timeIntervalInSeconds**的状态。在代码内部，有一个循环在点上迭代，在循环内部，有三个主要块。第一个计算力，我们将很快讨论。代码的第二部分计算新的速度和位置，然后将新状态分配给成员数据。代码的最后一部分将约束应用于点，以便某些点具有约束的位置或速度。例如，我们可以
+想象一个点被钉在墙上，其他点自由移动。
+
+​		现在让我们来讨论计算力的第一个块。如前所述，我们正在考虑三种不同的力：重力、弹簧和空气阻力。可变力是这三种不同力的累积。从重力出发，我们把它看作地球引力，定义为
+$$
+F_g=mg\tag{1.64}
+$$
+​		其中m是质量，g是向下的重力加速度矢量。g的大小取决于你所处的位置，但我们
+
+​		其中m是质量，g是向下的重力加速度矢量。g的大小取决于你所处的位置，但我们将使用-9.8m/s。因此，我们的重力系统是这样的
+
+```c++
+Vector3D gravity = Vector3D(0.0, -9.8, 0.0);
+...
+    void onAdvanceTimeStep(double timeIntervalInSeconds) override {
+    size_t numberOfPoints = positions.size();
+
+    for (size_t i = 0; i < numberOfPoints; ++i) {
+        forces[i] = mass * gravity;
+    }
+
+    ...
+}
+```
+
+​		到目前为止相当直截了当。现在让我们考虑弹簧力。当两个点与弹簧相连时，如果弹簧被压缩或拉长超过原始静止长度，则力将施加到这些点上。如图1.47所示，施加在某一点上的弹簧力的方向取决于弹簧是否被压缩，且力的大小与压缩或拉长的长度成正比。这是胡克定律，包含所有这些性质的方程可以写成：
+$$
+F_{s0}=-k(d-l)r_{10}\tag{1.65}
+$$
+力F~s1~是施加于点1的力，d是两点之间的距离，l是弹簧的静止长度，矢量r是从1面向点0的方向矢量。常数k是弹簧的刚度。因此，较大的k将产生更强的弹簧力。同样的力也作用于点1，但方向相反：
+$$
+F_{s1}=k(d-l)r_{01}\tag{1.65}
+$$
+![图1.47](image/图1.47.png)
+
+**图 1.47**
+
+对于静止长度为l的弹簧，如果两个连接点之间的距离更改为d时，将生成弹簧力并应用于点。
+
+根据上述方程式，计算弹簧力的代码可以写成：
+
+```c++
+double stiffness = 500.0;
+double restLength = 1.0;
+...
+    void onAdvanceTimeStep(double timeIntervalInSeconds) override {
+    size_t numberOfPoints = positions.size();
+    size_t numberOfEdges = edges.size();
+    
+    // Compute forces
+    for (size_t i = 0; i < numberOfPoints; ++i) {
+        // Compute gravity force
+        forces[i] = mass * gravity;
+    }
+    
+    for (size_t i = 0; i < numberOfEdges; ++i) {
+        size_t pointIndex0 = edges[i].first;
+        size_t pointIndex1 = edges[i].second;
+        
+        // Compute spring force
+        Vector3D pos0 = positions[pointIndex0];
+        Vector3D pos1 = positions[pointIndex1];
+        Vector3D r = pos0 - pos1;
+        double distance = r.length();
+        if (distance > 0.0) {
+            Vector3D force = -stiffness * (distance - restLength) * r.
+                rmalized();
+            forces[pointIndex0] += force;
+            forces[pointIndex1] -= force;
+        }
+    }
+    
+    ...
+}
+```
+
+​		请注意，//compute force块现在分为两个循环。第一个是前面代码中的重力部分。第二部分是一个新的代码，它在边（或弹簧）上迭代，计算弹簧力，然后累加到力数组。代码几乎按原样实现了这个等式。一个小的区别是“if语句”，它防止了被零除的情况。
+
+​		在弹簧力中还有一件事需要考虑，那就是阻尼。如果你想象一个真正的弹簧，它不会永远振荡，但运动会随着时间而衰减，就像我们在第1.5节看到的正弦衰减一样*
+
+​	该阻尼力试图降低两点之间的“相对”速度。但当这些点以不同的速度移动时，阻尼力就会起作用。如果我们把它写成一个方程，它就变成了
+$$
+F_{d0} = -c(v_0-v_1)\tag{1.67}
+$$
+​		力F~d0~是点0的阻尼力，v0和v1分别是点0和1的速度。我们可以看到，点0和点1之间的速度差，即点0的相对速度，是以常数缩放的−C例如，如果点1不移动（零速度），而点0在某个方向上移动，则点0将获得的力与其自身速度成正比，但方向相反。所以点0会减速，直到达到零速度。对称力也应用于点1，即
+$$
+F_{d1}=-c(v_1-v_0)\tag{1.68}
+$$
+​		现在让我们把这个方程写进代码中。
+
+```c++
+double dampingCoefficient = 1.0;
+...
+    void onAdvanceTimeStep(double timeIntervalInSeconds) override {
+    size_t numberOfPoints = positions.size();
+    size_t numberOfEdges = edges.size();
+    
+    // Compute gravity force
+    ...
+        
+        
+        for (size_t i = 0; i < numberOfEdges; ++i) {
+            size_t pointIndex0 = edges[i].first;
+            size_t pointIndex1 = edges[i].second;
+            
+            // Compute spring force
+            ...
+                
+                // Add damping force
+            Vector3D vel0 = velocities[pointIndex0];
+            Vector3D vel1 = velocities[pointIndex1];
+            Vector3D damping = -dampingCoefficient * (vel0 - vel1);
+            forces[pointIndex0] += damping;
+            forces[pointIndex1] -= damping;
+        }
+    
+    ...
+}
+```
+
+​		从第19行到第23行，代码显示了如何累积阻尼力。到目前为止，我们拥有的代码版本足以模拟质量-弹簧系统中的质量-弹簧，我们有足够的组件来创建带有弹簧的链式质量点的运动。图1.48显示了具有重力、弹簧和阻尼力的点的图像序列
+
+![图1.48](image/图1.48.png)
+
+**图 1.48**
+
+显示了具有重力和阻尼力的质量弹簧动画的帧序列。虚线显示了质点位置随时间变化的轨迹。
+
+​		作为一个附加功能，让我们将空气的效果添加到代码中，即空气阻力。空气阻力有各种各样的模型，但我们将采用最简单的模型。当物体在空气中运动时，它会受到来自空气的摩擦力，该摩擦力与物体的速度成正比。因此，物体越快，阻力就越大，我们可以把这个关系写成
+$$
+F_a=-bv\tag{1.69}
+$$
+​		式中，v是物体的速度，b是空气阻力系数。这个方程与我们前面看到的阻尼力非常相似。它会在对象运动的相反方向上创建一个力，如果速度更高，该力会变得更强。然而，这个方程没有考虑物体的形状，并将空气的性质简化为一个常数，因此它可能不是很精确。但是对于这个介绍性的例子，这个方程很好用。要将其合并到我们的代码中，我们可以如下所示更新代码。
