--- a/Computer Graphics/Books/流体引擎开发(个人翻译).md
+++ b/Computer Graphics/Books/流体引擎开发(个人翻译).md
@@ -2789,3 +2789,59 @@ $$
 F_a=-bv\tag{1.69}
 $$
 ​		式中，v是物体的速度，b是空气阻力系数。这个方程与我们前面看到的阻尼力非常相似。它会在对象运动的相反方向上创建一个力，如果速度更高，该力会变得更强。然而，这个方程没有考虑物体的形状，并将空气的性质简化为一个常数，因此它可能不是很精确。但是对于这个介绍性的例子，这个方程很好用。要将其合并到我们的代码中，我们可以如下所示更新代码。
+
+```c++
+doubledragCoefficient = 0.1;
+	...
+void onAdvanceTimeStep(doubletimeIntervalInSeconds)override{
+	...
+        
+    // Compute forces
+    for(size_t i = 0; i < numberOfPoints; ++i) {
+    	// Gravity force
+        forces[i] = mass * gravity;
+        
+        // Air drag force
+        forces[i] += -dragCoefficient * velocities[i];
+	}
+        
+	...
+}
+```
+
+​		现在，我们可以进一步扩展让我们的系统与风相互作用。上面的代码假设空气是静止的，只有点在移动。如果空气在移动，也就是风，我们可以假设“相对”速度可以用来计算阻力。通过添加几行代码，我们可以实现风效应，如下所示。
+
+```c++
+VectorField3Ptr wind;
+
+voidonAdvanceTimeStep(doubletimeIntervalInSeconds)override{
+	...
+
+    // Compute forces
+    for(size_t i = 0; i < numberOfPoints; ++i) {
+        // Gravity force
+        forces[i] = mass * gravity;
+
+        // Air drag force
+        Vector3D relativeVel = velocities[i];
+        if(wind !=nullptr) {
+            relativeVel -= wind->sample(positions[i]);
+        }
+        forces[i] += -dragCoefficient * relativeVel;
+
+    }
+
+	...
+}
+```
+
+​		风被定义为一个矢量场，**VectorField3Ptr**  wind，它是**vectorfield3**的共享指针。有关字段的信息，请参阅1.3.5节。无论如何，如果场设置好了，相对速度是根据风速计算出来的，然后应用到阻力上。例如，我们可以对动画对象应用如下所示的风函数。
+
+```c++
+SimpleMassSpringAnimation anim;
+anim.wind = std::make_shared<ConstantVectorField3>(Vector3D(10.0, 0.0,
+0.0));
+```
+
+这段代码会让风以每秒10米的速度从左向右吹动。ClassConstantVectorField3是内置的VectorField3类型之一，代码可以在**include/jet/constant_vector_field3.h** and **src/jet/ constant_vector_field3.cpp**找到。你也可以指定你自己的自定义矢量场对象来创建有趣的行为。
+
